--- a/client/submit.html
+++ b/client/submit.html
@@ -7,7 +7,7 @@
 			<input type="text" class="puzzle1 text-center" id="newpuzzlename" placeholder="Name of the puzzle/problem" name="puzzlename"/><br><br>
 		
 				
-			<textarea type="text" class="puzzle2 text-center" id="newpuzzle " placeholder="Puzzle/Problem" name="puzzle"></textarea><br><br>
+			<textarea type="text" class="puzzle2 text-center" id="newpuzzle " placeholder="Puzzle/Problem" name="puzzle" rows = "5"></textarea><br><br>
 			
 		
 			<input type="text" class="puzzle3 text-center" id="newpuzzleanswer" placeholder="Answer" name="answer"/><br><br>
