--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,31 +1,31 @@
 <template name="welcome">
 	
-	<div class="row">
-		<div class="col-md-6 bg-info">
-			<h1>Build Web and Mobile Apps!</h1>
-			<p> BMAD combines app design coursework with field trips and social activities to create an exciting and transformative summer experience. You'll have the chance to meet professional app developers and learn which part of the industry might be right for you!</p>
+	<div class="row jumbotron mySmallFont">
+		<div class="col-md-12 bg-info">
+			<h1 class="text-center Jumbotron">Are you a puzzler?</h1>
+			<p class="text-center"> PuzzleMe let's you share cool problems with anyone easily! </p>
 			<img src="images/mentoring.JPG" width="100%">
 			
 		</div>
 		
-		<div class="col-md-6 bg-warning">
-			<h1>Express your Creativity!</h1>
-			<p> We’ll give you the tools to design a variety of apps, including social media, lifestyle, entertainment, productivity, educational, and apps straight from your imagination that can be shared with family, friends, and fans the world over!</p>
+		<div class="col-md-12 bg-warning mySmallFont " id="secondDiv">
+			<h1 class="text-center">Put your skills to the test </h1>
+			<p class= "text=center"> Compare your answers with people around the world! Get better timing! Better Accuracy!  </p>
 			<img src="images/talking.JPG" width="100%">
 			
 		</div>
 		
 	</div>
-	<h1>Build exciting new apps with new friends</h1>
-	<p>
+	<h1 class="text-center Jumbotron">Compare your skills with your friends!</h1>
+	<h3><p>
 		<ul><li>
-Design your own mobile application
+Your score gets bigger the quicker you solve the problem!
 </li><li>
-Learn about the industry from Boston-area app developers and programmers
+It may start easy but... It won't stay that way. PuzzleMe's dynamic levelling system will make sure that it'll stay scaled to YOUR personal level.
 </li><li>
-Meet other teens from across the country who share your passion
+Meet other teens from across the country who share your passion. There are alot of puzzlers out there! Add them as your friends
 </li></ul>
-	</p>
+	</p><h/3>
 	
 	<img src="images/farber.jpg" width="100%">
 		
