--- a/client/welcome.html
+++ b/client/welcome.html
@@ -1,21 +1,29 @@
 <template name="welcome">
 	
 	<div class="row jumbotron mySmallFont">
-		<div class="col-md-12 bg-info">
-			<h1 class="text-center Jumbotron">Are you a puzzler?</h1>
-			<p class="text-center"> PuzzleMe let's you share cool problems with anyone easily! </p>
-			<img src="images/mentoring.JPG" width="100%">
+		<div class="col-md-12">
+			<h1 class="text-center Jumbotron">Are you a puzzler?
+				<small>
+					<p class="text-center"> PuzzleMe let's you share cool problems with anyone easily! </p>
+					<img src="images/Rubiks.png" width="100%" height="70%">
+				</small>
+			</h1>
 			
 		</div>
 		
 		<div class="col-md-12 bg-warning mySmallFont " id="secondDiv">
-			<h1 class="text-center">Put your skills to the test </h1>
-			<p class= "text=center"> Compare your answers with people around the world! Get better timing! Better Accuracy!  </p>
-			<img src="images/talking.JPG" width="100%">
+			<h1 class="text-center">Put your skills to the test 
+				<small>
+					<p class= "text-center"> Compare your answers with people around the world! Get better timing! Better Accuracy!  </p>
+				</small>
+			</h1>
+			<img src="https://bluecollartheology7.files.wordpress.com/2015/02/puzzle2.jpg" width="100%">
+			<br>
+			<br>
 			
 		</div>
 		
-	</div>
+	
 	<h1 class="text-center Jumbotron">Compare your skills with your friends!</h1>
 	<h3><p>
 		<ul><li>
@@ -28,6 +36,7 @@ Meet other teens from across the country who share your passion. There are alot 
 	</p></h3>
 	
 	<img src="images/farber.jpg" width="100%">
+	</div>
 		
 	
 
