submit button takes back to main

--- a/client/submit.html
+++ b/client/submit.html
@@ -13,8 +13,9 @@
 			<input type="text" class="puzzle3 text-center" id="newpuzzleanswer" placeholder="Answer" name="answer"/><br><br>
 			
 		
-		<button id="savePuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span>Submit</button>
+		<button id="savePuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span><a href="/">Submit</a></button>
 		
 		</div>
+		<h3>{{puzzle}}</h3>
 	
 </template>
