--- a/client/people/profileEdit.html
+++ b/client/people/profileEdit.html
@@ -3,6 +3,7 @@
 
 		first name:<input type="text" name="name" id="name" value="{{firstName}}"><br/>
 		last name:<input type="text" name="name" id="name" value="{{lastName}}"><br/>
+    age:<input type="text" name="age" id="age" value="{{age}}"><br/>
 		photo URL:<input type="text" name="photo" id="photo" value="{{photo}}"><br/>
 		bio:<br/><textarea name="bio" id="bio">{{bio}}</textarea><br/>
 		<input type="submit" id="submitEdit"><br/>
@@ -51,6 +52,13 @@
             <label class="col-lg-3 control-label">Last name:</label>
             <div class="col-lg-8">
               <input class="form-control" type="text" name="lastName" id="lastName" value="{{profile.lastName}}">
+            </div>
+          </div>
+
+           <div class="form-group">
+            <label class="col-lg-3 control-label">Age:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" name="age" id="age" value="{{profile.age}}">
             </div>
           </div>
 		  
