--- a/client/submit.html
+++ b/client/submit.html
@@ -1,21 +1,21 @@
 <template name="submit">
  <h1 class="jumbotron text-center">Send us a puzzle idea!</h1>
- 	<div class="row" id="newpuzzle">
+ 	<div class="row" id="submit">
 
 
 				
-			<input type="text" class="puzzle1 text-center" id="newpuzzlename" placeholder="Name of the puzzle/problem" name="puzzlename"/><br><br>
+			<input type="text" class="puzzle1 text-center" id="newpuzzlename" placeholder="Name of puzzle" name="Name of Puzzle"/><br><br>
 		
 				
-			<textarea type="text" class="puzzle2 text-center" id="newpuzzle " placeholder="Puzzle/Problem" name="puzzle" rows = "5"></textarea><br><br>
+			<textarea type="text" class="puzzle2 text-center" id="newpuzzle" placeholder="Puzzle" name="Puzzle" rows = "5"></textarea><br><br>
 			
 		
-			<input type="text" class="puzzle3 text-center" id="newpuzzleanswer" placeholder="Answer" name="answer"/><br><br>
+			<input type="text" class="puzzle3 text-center" id="newpuzzleanswer" placeholder="Answer" name="Answer"/><br><br>
 			
 		
 		<button id="savePuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span><a href="/">Submit</a></button>
 		
 		</div>
-		<h3>{{puzzle}}</h3>
+	
 	
 </template>
