more display stuff

--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -1,7 +1,12 @@
 <template name="puzzledisplay">
  <h1>{{puzzlename}}</h1><br><br>
  <h3>{{puzzle}}</h3>
- <input type="text" class="puzzle1 text-center" id="useranswer" placeholder="What is the answer?" name="Answer"/><br><br>
+ 	<div class = "puzzledisplay">
+ 	<input type="text" class="puzzle1 text-center" id="useranswer" placeholder="What is the answer?" name="Answer"/><br><br>
+	<button id="submitPuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span><a href="/">Submit</a></button>
+	</div>
+		
+
 
 
 </template>
