--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -1,7 +1,15 @@
 <template name="puzzledisplay">
- <h1>{{puzzlename}}</h1><br><br>
- <h3>{{puzzle}}</h3>
- <input type="text" class="puzzle1 text-center" id="useranswer" placeholder="What is the answer?" name="Answer"/><br><br>
+<div class="row jumbotron">
+
+	<div class="fluid-container jumbotron col-md-12">
+ 		<h1 class="Jumbotron text-center">{{puzzlename}}</h1>
+ 		<br><br>
+ 	</div>
+ 	<div class="fluid-container col-md-12">
+ 		<h3 class="text-center">{{puzzle}}</h3>
+ 		<input type="text" class="puzzle1 text-center" id="useranswer" placeholder="What is the answer?" name="Answer"/><br><br>
+ 	</div>
+ </div>
 
 
-</template>
+	</template>
