--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -5,7 +5,7 @@
  	</div>
  	<div class="fluid-container col-md-12">
  		<h3 class="text-center">{{puzzle}}</h3>
- 		<input type="text" class="puzzle1 text-center" id="useranswer" placeholder="What is the answer?" name="Answer"/><br><br>
+ 		<input type="text" class="puzzle1 text-center" id="newuseranswer" placeholder="What is the answer?" name="Answer"/><br><br>
  		<button id="submitPuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span><a href="/">Submit</a></button>
  	</div>
 
