--- a/client/submit.html
+++ b/client/submit.html
@@ -4,13 +4,13 @@
 
 
 				
-			<input type="text" class="puzzle1 text-center" id="newpuzzlename" placeholder="Name of puzzle" name="Name of Puzzle"/><br><br>
+			<input type="text" class="puzzle1 text-center form-control" id="newpuzzlename" placeholder="Name of puzzle" name="Name of Puzzle"/><br><br>
 		
 				
-			<textarea type="text" class="puzzle2 text-center" id="newpuzzle" placeholder="Puzzle" name="Puzzle" rows = "5"></textarea><br><br>
+			<textarea type="text" class="puzzle2 text-center form-control" id="newpuzzle" placeholder="Puzzle" name="Puzzle" rows = "5"></textarea><br><br>
 			
 		
-			<input type="text" class="puzzle3 text-center" id="newpuzzleanswer" placeholder="Answer" name="Answer"/><br><br>
+			<input type="text"  class="puzzle3 text-center form-control" id="newpuzzleanswer" placeholder="Answer" name="Answer"/><br><br>
 			
 		
 		<button id="savePuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span><a href="/">Submit</a></button>
