--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -5,8 +5,8 @@
  	</div>
  	<div class="fluid-container col-md-12">
  		<h3 class="text-center">{{puzzle}}</h3>
- 		<input type="text" class="puzzle1 text-center" id="newuseranswer" placeholder="What is the answer?" name="Answer"/><br><br>
- 		<button id="submitPuzzle"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span><a href="/">Submit</a></button>
+ 		<input type="text" class="puzzle1 text-center form-control" id="newuseranswer" placeholder="What is the answer?" name="Answer"/><br><br>
+ 		<button id="submitPuzzle" class="btn btn-success form-control" aria-hidden="true"><a href="/">Submit</a></button>
  	</div>
 
 
