--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -1,6 +1,6 @@
 <template name="puzzle">
 	<h2>The most recent puzzles are </h2>
-	<h4>currently showing {{currentnum}} puzzles</h4>
+	<h4>currently showing </h4><h4>{{currentnum}}</h4> <h4>puzzles</h4>
 	<div>
 		<table class="table table-striped" id="quotelist">
 			<tbody>
