--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -6,7 +6,7 @@
  	<div class="fluid-container col-md-12">
  		<h3 class="text-center">{{puzzle}}</h3>
  		<input type="text" class="puzzle1 text-center form-control" id="newuseranswer" placeholder="What is the answer?" name="Answer"/><br><br>
- 		<button id="submitPuzzle" class="btn btn-success form-control" aria-hidden="true"><a href="/">Submit</a></button>
+ 		<button id="submitPuzzle" class="btn btn-success" aria-hidden="true"><a href="/">Submit</a></button>
  	</div>
  	
 
