--- a/client/submit.html
+++ b/client/submit.html
@@ -13,7 +13,7 @@
 			<input type="text"  class="puzzle3 text-center form-control" id="newpuzzleanswer" placeholder="Answer" name="Answer"/><br><br>
 			
 		
-		<button id="savePuzzle" class="btn btn-success form-control" aria-hidden="true"><a href="/">Submit</a></button>
+		<button id="savePuzzle" class="btn btn-success" aria-hidden="true"><a href="/">Submit</a></button>
 		
 		</div>
 	
