--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -2,7 +2,7 @@
 	<h2>The most recent puzzles are </h2>
 	<h4>currently showing </h4><h4>{{currentnum}}</h4> <h4>puzzles</h4>
 	<div>
-		<table class="table table-striped" id="quotelist">
+		<table class="table table-striped" id="puzzlelist">
 			<tbody>
 			{{#each puzzles}}
 				{{> puzzleLine}}
