--- a/client/people/profileEdit.html
+++ b/client/people/profileEdit.html
@@ -3,11 +3,11 @@
 
 		first name:<input type="text" name="name" id="name" value="{{firstName}}"><br/>
 		last name:<input type="text" name="name" id="name" value="{{lastName}}"><br/>
-    age:<input type="text" name="age" id="age" value="{{age}}"><br/>
 		photo URL:<input type="text" name="photo" id="photo" value="{{photo}}"><br/>
 		bio:<br/><textarea name="bio" id="bio">{{bio}}</textarea><br/>
 		<input type="submit" id="submitEdit"><br/>
 		<input type="submit" value="cancel" id="cancelEdit"><br/>
+
 	</form>
 </template>
 
@@ -54,14 +54,7 @@
               <input class="form-control" type="text" name="lastName" id="lastName" value="{{profile.lastName}}">
             </div>
           </div>
-
-           <div class="form-group">
-            <label class="col-lg-3 control-label">Age:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" name="age" id="age" value="{{profile.age}}">
-            </div>
-          </div>
-		  
+		
           <div class="form-group">
             <label class="col-lg-3 control-label">UserName:</label>
             <div class="col-lg-8">
@@ -81,7 +74,10 @@
 				<input class="form-control" type="submit" id="profileEditSubmit" />
             </div>
           </div>
-		 
+		 <div> 
+      <input type="file" name="..."
+  class="myFileImput">
+</div>
         </form>
       </div>
   </div>
