operating search bar

--- a/client/search.html
+++ b/client/search.html
@@ -19,7 +19,7 @@
                 <input type="hidden" name="search_param" value="all" id="search_param">         
                 <input type="text" class="form-control searchBar" name="x" placeholder="Search term...">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                    <a href="/searched"><button class="btn btn-default" type="button" id="searchButton"><span class="glyphicon glyphicon-search"></span></button></a>
                 </span>
             </div>
         </div>
