--- a/client/homepage.html
+++ b/client/homepage.html
@@ -7,8 +7,15 @@
 			</h1>
 		</div>
 		<div class=" col-md-6 jumbotron bg-warning">
+			{{#if currentUser}}
 			<img src="images/PicsForHeaders.jpg" width= "500"><br>
 			<center><a class="btn butn-default text-center" href="/submit"><h3 class="text-center mySmallFont jumbotron">Submit A Puzzle</h3></a></center>
+			{{else}}
+				<img src="images/PicsForHeaders.jpg" width="500" >
+				<center><a class="btn butn-default text-center" href="/notUser"><h3 class="text-center mySmallFont jumbotron"> Sumbit A Puzzle</h3></a>
+				</center>
+			{{/if}}
+
 		</div>	
 
 		<div class="col-md-6 jumbotron">
@@ -28,9 +35,12 @@
 			
 		</div>
 		<div class="jumbotron col-md-6">
+			
 			<img src="http://i.ytimg.com/vi/ARM42-eorzE/maxresdefault.jpg" width="520" height= 335>
 			
 			<center><a class="btn butn-default text-center" href="/myprofile"><h3 class="text-center mySmallFont jumbotron"> About Us</h3></a></center>
+			
+			
 		</div>
 
 
