--- a/client/search.html
+++ b/client/search.html
@@ -16,8 +16,8 @@
                       <li><a href="#all">Anything</a></li>
                     </ul>
                 </div>
-                <input type="hidden" name="search_param" value="all" id="search_param">         
-                <input type="text" class="form-control searchBar" name="x" placeholder="Search term...">
+                <input type="hidden" name="search_param" value="all">         
+                <input type="text" class="form-control " name="x" placeholder="Search term..." id="searchWorking">
                 <span class="input-group-btn">
                     <a href="/searched"><button class="btn btn-default" type="button" id="searchButton"><span class="glyphicon glyphicon-search"></span></button></a>
                 </span>
