This adds a page to submit a photo via URL, does not work as of yet

--- a/client/people/profiless.html
+++ b/client/people/profiless.html
@@ -1,6 +1,6 @@
 <template name="profiless">
 <div> 
       <input type="file" name="..."
-  class="myFileImput">
+  class="myFileInput">
 </div>
 </template>
