--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -6,7 +6,13 @@
  	<div class="fluid-container col-md-12">
  		<h3 class="text-center">{{puzzle}}</h3>
  		<input type="text" class="puzzle1 text-center form-control" id="newuseranswer" placeholder="What is the answer?" name="Answer"/><br><br>
- 		<h1 class="text-center"><a href = "/puzzle"><button id="submitPuzzle" class="btn btn-success" aria-hidden="true">Submit</button></a></h1>
+ 		
+ 		
+ 		
+ 		<h1 class="text-center"><button id="submitPuzzle" class="btn btn-success" aria-hidden="true">Submit</button></h1>
+ 		
+
+
  	</div>
  	
  	
