--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -14,14 +14,17 @@
 	</div>
 </template>
 
-
-
 <template name="puzzleLine">
 	<tr>
 		<td>
 			<a href="{{pathFor 'puzzledisplay'}}">
 			<span class="puzzlename">{{puzzlename}}</span>
 			</a>
+
+			{{> demoTemp}}
+
 		</td>
 	</tr>
+	
 </template>
+
