--- a/client/demoTemp.html
+++ b/client/demoTemp.html
@@ -3,7 +3,7 @@
 	<button id="exit">down</button>
 	<br/>
 	<div id="countInfo">
-		Counter =  {{theCount}} 
+		Counter =  {{counter}}
 	</div>
 
 </template>
