--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -12,6 +12,8 @@
  		
  		
  		
+ 		<h1 class="text-center"><button id="submitPuzzle" class="btn btn-success" aria-hidden="true">Submit</button></h1>
  		
+
  	</div>
 	</template>
