fixed clicker and working on searching

--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -30,8 +30,10 @@
 	<tr>
 		<td>
 			<a href="{{pathFor 'puzzledisplay'}}">
-			<span class="puzzlename">{{puzzlename}}</span>
+			<h1 class="puzzlename text-center">{{puzzlename}}</h1>
 			</a>
+		</td>
+		<td>
 
 			{{> demoTemp}}
 
