--- a/client/demoTemp.html
+++ b/client/demoTemp.html
@@ -1,9 +1,14 @@
 <template name="demoTemp">
-	<button id="clicker">up</button>
-	<button id="exit">down</button>
-	<br/>
-	<div id="countInfo">
-		Counter =  {{counter}}
+<div id="countInfo" class="text-center" >
+		<h4>Likes =  {{counter}}</h4>
+	
+	<h3><center>
+
+	<button id="clicker" class="glyphicon glyphicon-thumbs-up text-center"></button>
+	<button id="exit" class="glyphicon glyphicon-thumbs-down text-center"></button>
+	</center>
+	</h3>
 	</div>
 
+	
 </template>
