--- a/client/people/profileEdit.html
+++ b/client/people/profileEdit.html
@@ -67,6 +67,12 @@
             <div class="col-lg-8">
 				<textarea name="bio" class="form-control" rows="5" id="bio">{{profile.bio}}</textarea>
             </div>
+             <div class="form-group">
+            <label class="col-lg-3 control-label">Age:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" name="age" id="age" value="{{profile.age}}">
+            </div>
+          </div>
           </div>
 		  
           <div class="form-group">
