puzzle page nice looking stuff

--- a/client/demoTemp.html
+++ b/client/demoTemp.html
@@ -4,8 +4,8 @@
 	
 	<h3><center>
 
-	<button id="clicker" class="glyphicon glyphicon-thumbs-up text-center"></button>
-	<button id="exit" class="glyphicon glyphicon-thumbs-down text-center"></button>
+	<button id="clicker" class="glyphicon glyphicon-thumbs-up text-center btn-success"></button>
+	<button id="exit" class="glyphicon glyphicon-thumbs-down text-center btn-danger"></button>
 	</center>
 	</h3>
 	</div>
