--- a/client/search.html
+++ b/client/search.html
@@ -3,19 +3,6 @@
     <div class="row">    
 		    <div class="input-group">
                 <div class="input-group-btn search-panel">
-                  <div class="col-xs-3">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    	<span id="search_concept">Filter by</span> <span class="caret"></span>
-                    </button>
-                    </div>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href="#contains">Contains</a></li>
-                      <li><a href="#its_equal">It's equal</a></li>
-                      <li><a href="#greather_than">Greather than ></a></li>
-                      <li><a href="#less_than">Less than </a></li>
-                      <li class="divider"></li>
-                      <li><a href="#all">Anything</a></li>
-                    </ul>
                 </div>
               <div class="col-xs-8">
                 <input type="hidden" name="search_param" value="all">         
@@ -23,7 +10,7 @@
               </div>
               <div class = "col-xs-1">
                 <span class="input-group-btn">
-                    <a href="/searched"><button class="btn btn-default" type="button" id="searchButton"><span class="glyphicon glyphicon-search"></span></button></a>
+                    <a href="{{pathFor 'searched'}}"><button class="btn btn-default" type="button" id="searchButton"><span class="glyphicon glyphicon-search"></span></button></a>
                 </span>
                 </div>
 
