--- a/client/search.html
+++ b/client/search.html
@@ -2,15 +2,13 @@
 <div class="container">
     <div class="row">    
 		    <div class="input-group">
-                <div class="input-group-btn search-panel">
-                </div>
               <div class="col-xs-8">
                 <input type="hidden" name="search_param" value="all">         
-                <input type="text" class="form-control " name="x" placeholder="Search term..." id="searchWorking">
+                <input type="text" class="form-control" name="x" placeholder="Search term..." id="searchWorking">
               </div>
               <div class = "col-xs-1">
                 <span class="input-group-btn">
-                    <a href="{{pathFor 'searched'}}"><button class="btn btn-default" type="button" id="searchButton"><span class="glyphicon glyphicon-search"></span></button></a>
+                    <a href="{{pathFor route='searched'}}"><button class="btn btn-default" type="button" id="searchButton"><span class="glyphicon glyphicon-search"></span></button></a>
                 </span>
                 </div>
 
