--- a/client/searched.html
+++ b/client/searched.html
@@ -32,7 +32,7 @@
 		</td>
 	</tr>
 </template>
-<template name="searchuserLine">
+<template name="searchUserLine">
 	<tr>
 		<td>
 			<a href='{{pathFor 'profile'}}'>
