fixed search bar

--- a/client/searched.html
+++ b/client/searched.html
@@ -36,7 +36,7 @@
 	<tr>
 		<td>
 			<a href='{{pathFor 'profile'}}'>
-				<h1 class="username text-center">{{userName}}</h1></a>
+				<h1 class="username text-center">{{profile.userName}}</h1></a>
 		</td>
 	</tr>
 
