--- a/client/welcome.html
+++ b/client/welcome.html
@@ -4,7 +4,7 @@
 		<div class="col-md-12">
 			<h1 class="text-center Jumbotron">Are you a puzzler?
 				<small>
-					<p class="text-center"> PuzzleMe let's you share cool problems with anyone easily! </p>
+					<p class="text-center"> PuzzleMe lets you share cool problems with anyone easily! </p>
 					<img src="images/Rubiks.png" width="100%" height="70%">
 				</small>
 			</h1>
@@ -29,9 +29,9 @@
 		<ul><li>
 Your score gets bigger the quicker you solve the problem!
 </li><li>
-It may start easy but... It won't stay that way. PuzzleMe's dynamic levelling system will make sure that it'll stay scaled to YOUR personal level.
+It may start easy ... but it won't stay that way. PuzzleMe's dynamic levelling system will make sure that it'll stay scaled to YOUR personal level.
 </li><li>
-Meet other teens from across the country who share your passion. There are alot of puzzlers out there! Add them as your friends
+Meet other teens from across the country who share your passion. There are a lot of puzzlers out there! Add them as your friends
 </li></ul>
 	</p></h3>
 	
