--- a/client/boo.html
+++ b/client/boo.html
@@ -2,7 +2,7 @@
 	<div>
 		<br>
 		<br><br><br>
-		<h1 class="jumbotron text-center"> Not Quite right :(<br><small>But I bet you'll get it next time.</small></h1>
+		<h1 class="jumbotron text-center"> Not Quite Right :(<br><small>But I bet you'll get it next time.</small></h1>
 		<br>
 		 		<h1 class="text-center "><button id="tryAgain" class="btn btn-success" aria-hidden="true">TRY AGAIN!</button></h1>
 
