--- a/client/welcome.html
+++ b/client/welcome.html
@@ -27,7 +27,7 @@
 	<h1 class="text-center Jumbotron">Compare your skills with your friends!</h1>
 	<h3><p>
 		<ul><li>
-Your score gets bigger the quicker you solve the problem!
+The quicker you solve the problem, the higher your score gets!
 </li><li>
 It may start easy ... but it won't stay that way. PuzzleMe's dynamic levelling system will make sure that it'll stay scaled to YOUR personal level.
 </li><li>
