Even more grammar

--- a/client/welcome.html
+++ b/client/welcome.html
@@ -14,7 +14,7 @@
 		<div class="col-md-12 bg-warning mySmallFont " id="secondDiv">
 			<h1 class="text-center">Put your skills to the test 
 				<small>
-					<p class= "text-center"> Compare your answers with people around the world! Get better timing! Better Accuracy!  </p>
+					<p class= "text-center"> Compare your answers with people around the world! Get better timing! Better accuracy!  </p>
 				</small>
 			</h1>
 			<img src="https://bluecollartheology7.files.wordpress.com/2015/02/puzzle2.jpg" width="100%">
@@ -31,7 +31,7 @@ The quicker you solve the problem, the higher your score gets!
 </li><li>
 It may start easy ... but it won't stay that way. PuzzleMe's dynamic levelling system will make sure that it'll stay scaled to YOUR personal level.
 </li><li>
-Meet other teens from across the country who share your passion. There are a lot of puzzlers out there! Add them as your friends
+Meet other teens from across the country who share your passion. There are a lot of puzzlers out there! Add them as your friends!
 </li></ul>
 	</p></h3>
 	
