--- a/client/homepage.html
+++ b/client/homepage.html
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
 			<h1 class="text-center jumbotron"> 
 					Puzzle Me <br>
-				<small> Challenge Yourself Always</small>
+				<small> Challenge Yourself. Always.</small>
 			</h1>
 		</div>
 		<div class=" col-md-6 jumbotron bg-warning">
