Feedback page part 2

--- a/client/feedback.html
+++ b/client/feedback.html
@@ -12,7 +12,7 @@
 		
 			
 		
-		<h1 class="text-center"><a href="/feedback"><button id="saveFeedback" class="btn btn-success" aria-hidden="true">Submit</button></a></h1>
+		<h1 class="text-center"><button id="saveFeedback" class="btn btn-success" aria-hidden="true">Submit</button></h1>
 		
 		</div>
 	
