just cleaned up how a few code lines looked, tried working more on URLPhotoPull

--- a/client/people/profiless.html
+++ b/client/people/profiless.html
@@ -1,6 +1,7 @@
 <template name="profiless">
 <div> 
       <input type="file" name="..."
-  class="myFileInput">
+  class="myFileInput" id="photo1">
+ <img src="images">
 </div>
 </template>
