--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -1,5 +1,5 @@
 <template name="puzzle">
-	<h2 class="jumbotron text-center">The most recent puzzles are <br><br>
+	<h2 class="jumbotron text-center">The most recent {{ showNum}} puzzles are <br><br>
 	</h2>
 	
 	<div>
