--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -28,10 +28,10 @@
 
 <template name="puzzleLine">
 	<tr>
-		<td>
-			<a href="{{pathFor 'puzzledisplay'}}">
-			<h1 class="puzzlename text-center">{{puzzlename}}</h1>
-			</a>
+		<td><div class="col-md-8">
+			<center><a href="{{pathFor 'puzzledisplay'}}"><button id="puzzlelink" class="puzzlelink">
+			<h1 class="puzzlename text-center">{{puzzlename}}</h1></button>
+			</a></center></div>
 		</td>
 		<td>
 
