--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -1,4 +1,6 @@
-<template name = "puzzledisplay">	
+<template name = "puzzledisplay">
+	<input type="hidden" id="puzzleID" value="{{_id}}">	
+	
 	<div class="fluid-container jumbotron col-md-12">
  		<h1 class="Jumbotron text-center">{{puzzlename}}</h1>
  		
