--- a/client/puzzle.html
+++ b/client/puzzle.html
@@ -1,6 +1,6 @@
 <template name="puzzle">
 
-	<h2 class="jumbotron text-center">The most recent {{ showNum}} puzzles are <br><br>
+	<h2 class="jumbotron text-center">The most recent {{ showNum}} puzzles are <br><br></h2>
 
 	<h2 class="jumbotron text-center">The most popular puzzles are... <br><br>
 
