--- a/client/homepage.html
+++ b/client/homepage.html
@@ -12,7 +12,7 @@
 			<center><a class="btn butn-default text-center" href="/submit"><h3 class="text-center mySmallFont jumbotron">Submit A Puzzle</h3></a></center>
 			{{else}}
 				<center><img src="images/PicsForHeaders.jpg" width="500" ></center>
-				<center><a class="btn butn-default text-center" href="/notUser"><h3 class="text-center mySmallFont jumbotron"> Submit A Puzzle</h3></a>
+				<center><a class="btn butn-default text-center" href="/notUser"><h3 class="text-center mySmallFont jumbotron"> Submit A Puzzle</h3></a></center>
 				<img src="images/PicsForHeaders.jpg" width="500" >
 				<center><a class="btn btn-default text-center" href="/notUser"><h3 class="text-center mySmallFont jumbotron"> Sumbit A Puzzle</h3></a>
 				</center>
