Image as a part of the DB

--- a/client/submit.html
+++ b/client/submit.html
@@ -11,11 +11,14 @@
 			
 		
 			<input type="text"  class="puzzle3 text-center form-control" id="newpuzzleanswer" placeholder="Answer" name="Answer"/><br><br>
+
+			<input type="text"  class="puzzle3 text-center form-control" id="newpuzzleimage" placeholder="Insert Image URL" name="Answer"/><br><br>
+
 			
 		
 		<h1 class="text-center"><a href="/puzzle"><button id="savePuzzle" class="btn btn-success" aria-hidden="true">Submit</button></a></h1>
 		
-		</div>
+	</div>
 	
 	
 </template>
