--- a/client/demoTemp.html
+++ b/client/demoTemp.html
@@ -1,5 +1,9 @@
 <template name="demoTemp">
 	<div class="text-center" >
+			<input type="hidden" id="likes" value="{{likes}}">
+			<input type="hidden" id="newLikes" value="{{_id}}">	
+
+
 		<h4>Likes =  <span id="countInfo">{{likes}}</span></h4>
 		<h3>
 			<center>
