--- a/client/puzzledisplay.html
+++ b/client/puzzledisplay.html
@@ -9,6 +9,8 @@
 
  	<div class="fluid-container col-md-12">
  		<h3 class="text-center">{{puzzle}}</h3>
+ 		
+ 		<center><img src="http://www.jeaconf.org/UploadedFiles/Images/NoImage.jpg" id="puzzleNewImage" height="400" width="400"></center>
 
  		<input type="text" class="puzzle1 text-center form-control" id="newuseranswer" placeholder="What is the answer?" name="Answer"/><br><br>
  		
