--- a/client/about.html
+++ b/client/about.html
@@ -1,3 +1,4 @@
+
 <template name="about">
 <div class= "row">
 <div class="card col-md-3">
@@ -33,3 +34,32 @@
 
 </template>
      
+
+<template name="hello">
+<body>
+	  <div class="ocntainer col-ma-12 bg-info">
+    <h1 class="Jumbotron">About Us</h1>
+<h3>Project Manager</h3>
+<h4>Nishant Date</h4>
+<img src="images/IMG_2319.jpg" height="350" width="200">
+<h3>Relevant</h3>
+<h4>Kate Sotir</h4>
+<img src="images/IMG_4462.jpg" height="300" width="200">
+<h4>Josh Hoerr</h4>  
+<img src="images/IMG_4464.jpg" height="300" width="200">
+<h4>Dan Zakon</h4>
+<img src="images/IMG_4468.jpg" height="300" width="200">
+<h4>Jordan Phillips</h4>
+<img src="images/IMG_4465.jpg" height="300" width="200">
+<h4>YuHan Feng</h4>
+<img src="images/IMG_4466.jpg" height="300" width="200">
+<br>
+
+{{> hello}}
+</div>
+</body>
+
+  <button>Back</button>
+
+</template>
+
