--- a/client/homepage.html
+++ b/client/homepage.html
@@ -41,7 +41,7 @@
 			<center><img src="http://i.ytimg.com/vi/ARM42-eorzE/maxresdefault.jpg" width="500" height="450"></center>
 			
 
-			<center><a class="btn butn-default text-center" href="/welcome"><h3 class="text-center mySmallFont jumbotron"> About Us</h3></a></center>
+			<center><a class="btn butn-default text-center" href="/welcome"><h3 class="text-center mySmallFont jumbotron"> About Team</h3></a></center>
 
 			<center><a class="btn butn-default text-center" href="/AboutUs"><h3 class="text-center mySmallFont jumbotron"> About Us</h3></a></center>
 			
