--- a/client/demoTemp.html
+++ b/client/demoTemp.html
@@ -1,7 +1,7 @@
 <template name="demoTemp">
 	<div class="text-center" >
 			<input type="hidden" id="likes" value="{{likes}}">
-			<input type="hidden" id="newLikes" value="{{_id}}">	
+			<input type="hidden" id="puzzleId" value="{{_id}}">	
 
 
 		<h4>Likes =  <span id="countInfo">{{likes}}</span></h4>
