--- a/client/people/aboutus.html
+++ b/client/people/aboutus.html
@@ -1,22 +1,56 @@
 <template name="aboutus">
-<body>	
-	  <div class="container col-ma-12 bg-info">
-    <h1 class="Jumbotron">About Us</h1>
-<h2>Our Team</h2>
-<h3>Nishant Date</h3>
-<img src="images/IMG_2319.jpg" height="350" width="200">
-<h3>Jordan Phillips</h3>
-<img src="images/IMG_4465.jpg" height="300" width="200"><br>
-<h3>Josh Hoerr</h3>  
-<img src="images/IMG_4464.jpg" height="300" width="200"><br>
-<h3>Dan Zakon</h3>
-<p>Dan, a co-founder of PuzzleMe, was born in 1998 and currently lives in Lexington, Massachussets. He is an App Design student at Brandeis University, and attends the Belmont Hill School during the year.  Dan's enjoys challenging himself with PuzzleMe's unique crowdsourced database of puzzles and riddles.</p>
-<img src="images/IMG_4468.jpg" height="300" width="200"><br>
-<h3>Kate Sotir</h3><img src="images/IMG_4462.jpg" height="300" width="200"><br>
-<h3>YuHan Feng</h3>
-<p>YuHan Feng, a co-founder of PuzzleMe. She is from China.This is her first timecontact with web design.She learnede a lot from Tim and her groupmate.</p>
-<img src="images/IMG_4466.jpg" height="300" width="200">
-<br>
+<div class="container col-md-12 ">
+	    <h1 class="Jumbotron">About Us</h1>
+	<h2>Our Team</h2>
+	<div class="row">
+		<div class="col-md-3 jumbotron">
+			<h3 class= "text-center">Nishant Date</h3>
+			<p>Nishant, a co-founder of PuzzleMe, was born in 1998 and currently lives in Pune, India. He came into the app design with a blank slate-and quickly adapted to the workings of JS and HTML. He is inchrage of the front-end working of PuzzlMe.  s</p>
+			<center><img src="images/IMG_2319.jpg" height="350" width="200"></center>
+		</div>
+
+
+		<div class="col-md-3 jumbotron">
+			<h3 class= "text-center">Dan Zakon</h3>
+			<center><img src="images/IMG_4468.jpg" height="300" width="200"></center><br>
+
+			<p>Dan, a co-founder of PuzzleMe, was born in 1998 and currently lives in Lexington, Massachussets. He is an App Design student at Brandeis University, and attends the Belmont Hill School during the year.  Da enjoys challenging himself with PuzzleMe's unique crowdsourced database of puzzles and riddles.</p>
+		</div>
+		<div class="col-md-3 jumbotron">
+			<h3 class= "text-center">Jordan Phillips</h3>
+			<center><img src="images/IMG_4465.jpg" height="300" width="200"><br></center>
+		</div>
+	</div>
+	<br>
 </div>
-</body>
+
+<div class="row">
+	<div class="col-md-3 jumbotron">
+		<h3 class= "text-center">Josh Hoerr</h3>  <!-- Josh -->
+		<center><img src="images/IMG_4464.jpg" height="300" width="200"></center><br>
+		<p>
+			Joshua is 18 years old and a resident of Massachusetts. With no previous coding experience, he came onto our team as a rookie. As of now, he is a co-founder of PuzzleMe is one of our team's developers. His hobbies consist of writing poetry, running track, and making people laugh.
+		</p>
+	</div>
+	
+	<div class="col-md-3 jumbotron">
+		<h3 class= "text-center">YuHan Feng</h3> <!-- Yuhan -->
+		<center><img src="images/IMG_4466.jpg" height="300" width="200"></center>
+		<p>YuHan Feng, a co-founder of PuzzleMe. She is from China.This is her first timecontact with web design.She learnede a lot from Tim and her groupmate.</p>
+	</div>
+
+	<div class="col-md-3 jumbotron">
+		<h3 class= "text-center">Kate Sotir</h3><br>
+		<center><img src="images/IMG_4462.jpg" height="300" width="200"><br></center> <!-- Kate -->
+		<p>Kate Sotir is a 16 year old rising junior who has lived in Waltham, MA for her entire life. Having only done a little bit of coding in HTML before this program, she has enjoyed learning more HTML and other languages. Kate enjoys reading, soccer, and rock climbing. </p>
+
+	</div>	
+
+
+</div>
+
 </template>
+
+
+		
+
