--- a/client/people/profile.html
+++ b/client/people/profile.html
@@ -1,22 +1,18 @@
-<template name="aboutus">
-<body>	
-	  <div class="container col-ma-12 bg-info">
-    <h1 class="Jumbotron">About Us</h1>
-<h2>Our Team</h2>
-<h3>Nishant Date</h3>
-<img src="images/IMG_2319.jpg" height="350" width="200">
-<h3>Jordan Phillips</h3>
-<img src="images/IMG_4465.jpg" height="300" width="200"><br>
-<h3>Josh Hoerr</h3>  
-<img src="images/IMG_4464.jpg" height="300" width="200"><br>
-<h3>Dan Zakon</h3>
-<p>Dan, a co-founder of PuzzleMe, was born in 1998 and currently lives in Lexington, Massachussets. He is an App Design student at Brandeis University, and attends the Belmont Hill School during the year.  Dan's enjoys challenging himself with PuzzleMe's unique crowdsourced database of puzzles and riddles.</p>
-<img src="images/IMG_4468.jpg" height="300" width="200"><br>
-<h3>Kate Sotir</h3><img src="images/IMG_4462.jpg" height="300" width="200"><br>
-<h3>YuHan Feng</h3>
-<p>YuHan Feng, a co-founder of PuzzleMe. She is from China.This is her first timecontact with web design.She learnede a lot from Tim and her groupmate.</p>
-<img src="images/IMG_4466.jpg" height="300" width="200">
-<br>
-</div>
-</body>
-</template>
+<template name="profile">
+	<div class="jumbotron">
+		<h2>{{profile.firstName}} {{profile.lastName}} -- {{profile.userName}}
+			{{#if ownPost}}
+			<a href="{{pathFor 'profileEdit'}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+			{{/if}}
+		</h2>
+		<div class="row">
+			<div class="col-md-6">
+				<img src="{{photo}}?s=400" alt="photo of {{profile.firstName}} {{profile.lastName}}" class="align-left">
+			</div>
+			<div class="col-md-6">
+				<p>{{profile.bio}}</p>
+				<p>Age:{{profile.age}}</p>
+			</div>
+		</div>
+	</div>
+</template> 
