--- a/client/Puzzles/puzzledisplay.html
+++ b/client/Puzzles/puzzledisplay.html
@@ -17,6 +17,7 @@
  		
  		
  		<h1 class="text-center"><button id="submitPuzzle" class="btn btn-success" aria-hidden="true">Submit</button></h1>
+ 		 <h1 class="text-center"><button id="answerPuzzle" class="btn btn-success" aria-hidden="true">Display Answer</button></h1>
 
  	</div>
 	</template>
