--- a/client/people/aboutus.html
+++ b/client/people/aboutus.html
@@ -5,8 +5,9 @@
 	<div class="row">
 		<div class="col-md-3 jumbotron">
 			<h3 class= "text-center">Nishant Date</h3>
-			<p>Nishant, a co-founder of PuzzleMe, was born in 1998 and currently lives in Pune, India. He came into the app design with a blank slate-and quickly adapted to the workings of JS and HTML. He is inchrage of the front-end working of PuzzlMe.  s</p>
 			<center><img src="images/IMG_2319.jpg" height="350" width="200"></center>
+			<p>Nishant, a co-founder of PuzzleMe, was born in 1998 and currently lives in Pune, India. He came into the app design with a blank slate-and quickly adapted to the workings of JS and HTML. He is inchrage of the front-end working of PuzzlMe.  s</p>
+			
 		</div>
 
 
@@ -14,11 +15,12 @@
 			<h3 class= "text-center">Dan Zakon</h3>
 			<center><img src="images/IMG_4468.jpg" height="300" width="200"></center><br>
 
-			<p>Dan, a co-founder of PuzzleMe, was born in 1998 and currently lives in Lexington, Massachussets. He is an App Design student at Brandeis University, and attends the Belmont Hill School during the year.  Da enjoys challenging himself with PuzzleMe's unique crowdsourced database of puzzles and riddles.</p>
+			<p>Dan, a co-founder of PuzzleMe, was born in 1998 and currently lives in Lexington, Massachussets. He is an App Design student at Brandeis University, and attends the Belmont Hill School during the year.  Dan enjoys challenging himself with PuzzleMe's unique crowdsourced database of puzzles and riddles.</p>
 		</div>
 		<div class="col-md-3 jumbotron">
 			<h3 class= "text-center">Jordan Phillips</h3>
 			<center><img src="images/IMG_4465.jpg" height="300" width="200"><br></center>
+			<p>Jordan, a co-founder of PuzzleMe, was born in 2000 and currently lives in Westfield,New Jersey. He had little previous coding knowledge, but he learned quickly. Jordan likes the challenge that some of the puzzles that PuzzleMe brings!</p>
 		</div>
 	</div>
 	<br>
